log/build_2025-02-10_19-27-08/controller/stderr.log
  File "/home/daniel/controlbot_ws/install/controller/lib/python3.10/site-packages/controller/hw_interface.py", line 55
    self.serial_port.write(22           self.get_logger().info('Sending {} for Motor {}'.format(speed, motor_id))
                          ^
SyntaxError: '(' was never closed

